examples/k8stest/conf/Gateway/AllowedRoutes/Kinds/01_Gateway.yaml
# AllowedRoutes Kinds 
# Gateway  allowedRoutes.kinds  HTTPRoute
# GRPCRoute 
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: allowed-routes-kinds-gateway
  namespace: edgion-test
spec:
  gatewayClassName: public-gateway
  listeners:
    - name: http
      protocol: HTTP
      port: 31213
      allowedRoutes:
        kinds:
          - group: gateway.networking.k8s.io
            kind: HTTPRoute  #  HTTPRoute
